# legacy-audio-provisioner

./: .editorconfig  .gitignore  .traceability_lint_exemptions.txt  ARCHITECTURAL_DECISIONS.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md
.github/: pull_request_template.md
crates/lap-bin-ingest/: Cargo.toml
crates/lap-bin-ingest/src/: main.rs
crates/lap-bin-provision/: Cargo.toml
crates/lap-bin-provision/src/: main.rs  messages.rs  orchestrator.rs  reporter.rs
crates/lap-bin-provision/tests/: structured_logging_test.rs
crates/lap-cli-tools/: Cargo.toml
crates/lap-cli-tools/src/: main.rs
crates/lap-core/: Cargo.toml
crates/lap-core/src/: audio_discovery.rs  backup.rs  checkpoint.rs  crypto.rs  diffing.rs  distribution.rs  error.rs  hardware.rs  in_place_transformer.rs  index_manager.rs  ingestion.rs  ipc.rs  journal.rs  lib.rs  manifest.rs  normalizer.rs  recovery.rs  sanitizer.rs  security.rs  state.rs  verification.rs
crates/lap-core/tests/: integration_test.rs
docs/: README.md  playbook_reprovision_usb.md  tech_spec.md
docs/adr/: 0001-rust-project-structure.md  0002-direct-file-copy.md  0003-ffmpeg-normalization.md  0004-quarantine-isolation.md  0005-sync-sha256.md  0006-docs-as-code-governance.md  0007-canonical-path-validation.md  0008-host-local-staging-for-in-situ-refactoring.md  0009-cli-standardization.md  0010-offensive-security-hardening.md  0011-architecture-single-vs-workspace.md  0012-thin-entrypoint-orchestrator-reporter.md  README.md
docs/architecture/: R04_strict_hardware_validation.md  R06_audio_normalization_ffmpeg.md  R16_R17_checkpoint_and_recovery.md  R16_sync_before_unmount_and_poweroff.md  README.md  architecture_overview.md  atomic-json-checkpoint.md  checkpoint_recovery.md  force-normalization-through-ffmpeg.md  normalization-destructive-ffmpeg.md  strict-hardware-validation.md  sync-before-unmount-and-poweroff.md  use-json-checkpoint-for-recovery.md
docs/archive/: AUDIT_MAIN_RS.md  AUDIT_RESOLUTION_REPORT.md  DEPENDENCIES_AUDIT.md  GUIDE_SOFTWARE_DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md
docs/contracts/: design_by_contract.md
docs/guides/: README.md  ai_master_prompt_google_style.md  requirements_diagrams.md  requirements_workflow.md  usage.md
docs/spec/: OPERATIONAL_DECISIONS.md  README.md  requirements_diagrams_visual.md  requirements_traceability.md  sdd_edge_cases_phase2.md  spec_driven_development.md  tech_spec.md
docs/testing/: audit_scorecard_2026-05-09.md  integration_tests.md  objective_audit_rubric.md  pbt_and_e2e_test_plan.md
docs/testing/evidence/: README.md
docs/testing/evidence/r02_010/2026-03-25/: r02_010_traceabilidad_componentes_y_algoritmo.md  strace_summary.txt
scripts/: telemetry_r02_010_io_wear.sh  traceability_lint.sh
src/: backup.rs  checkpoint.rs  diffing.rs  distribution.rs  error.rs  hardware.rs  ingestion.rs  lib.rs  main.rs  normalizer.rs  recovery.rs  sanitizer.rs  verification.rs
tests/: integration_test.rs
