[package]
name = "legacy-audio-provisioner"
version = "1.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
thiserror = "1.0"

# Added: System filesystem operations (for statvfs, mount detection)
nix = { version = "0.27", features = ["fs"] }

# Added: Audio metadata (ID3 tags - strip album art from MP3s)
metaflac = "0.2"

# Note: ac-ffmpeg requires system FFmpeg installation
# Will be added in Phase 3 when FFmpeg wrapper is implemented
# For now: use std::process::Command to call ffmpeg binary directly

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
