[workspace]
resolver = "2"
members = [
	"crates/lap-core",
	"crates/lap-bin-ingest",
	"crates/lap-bin-provision",
	"crates/lap-cli-tools",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Luis <luisrc722@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
indicatif = "0.17"
log = "0.4"
nix = { version = "0.27", features = ["fs"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
walkdir = "2.4"
tempfile = "3.8"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
