[package]
name = "lap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
any_ascii.workspace = true
regex.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
anyhow.workspace = true
log.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
